# CameraMotionRig

./: .gitignore  README.md  upload_to_boards.py
MIDI-Cmd-Server/: BITFOCUS_COMPANION_SETUP.md  camera_midi.js  install_service.bat  package.json  restart_service.bat
camera/: CameraController.py  CameraController_clean.py  camera.ino  test.py  test3.py
camera_async/: CameraController.py  README.md  camera_async.ino  camera_test.ino.dis  test2.py  test3.py
camera_fysetc_e4/: .gitignore  BUILD_INSTRUCTIONS.md  CHECK_FLASH_SIZE.md  CMakeLists.txt  QUICK_START.md  README.md  build_and_flash.bat  build_and_flash.sh  ota_upload.bat  ota_upload.sh  partitions.csv  sdkconfig.defaults
camera_fysetc_e4/main/: CMakeLists.txt  board.c  board.h  embed_html.py  homing.c  homing.h  http_server.c  http_server.h  main.c  motion_controller.c  motion_controller.h  motion_planner.c  motion_planner.h  preset_storage.c  preset_storage.h  quintic.c  quintic.h  segment.c  segment.h  stepper_executor.c  stepper_executor.h  stepper_limits.h  stepper_simple.c  stepper_simple.h  test_main.c  tmc2209.c  tmc2209.h  usb_serial.c  usb_serial.h  web_ui.html  wifi_config.h  wifi_manager.c  wifi_manager.h
camera_fysetc_e4_/: BUILD_INSTRUCTIONS.md  CRITICAL_FIXES.md  FLUIDNC_CONFIG_NOTES.md  GPIO15_ENDSTOP_WIRING.md  HOLD_CURRENT_FIX.md  IMPLEMENTATION_SUMMARY.md  MOTOR_OVERHEAT_FIX.md  QUICK_START.md  README.md  SENSORLESS_HOMING.md  SENSORLESS_IMPLEMENTATION.md  SENSORLESS_TROUBLESHOOTING.md  STALLGUARD_DIAGNOSTICS.md  TEST_INSTRUCTIONS.md  TMC2209_CURRENT_SETTINGS.md  UART_COMMUNICATION_ISSUE.md  UART_MODE_REQUIRED.md  WRITE_NOT_WORKING.md  ZOOM_ENDSTOP_SETUP.md  build_and_flash.bat  sdkconfig.defaults
camera_fysetc_e4_/main/: board.c  board.h  homing.c  http_server.c  http_server.h  main.c  motion_planner.c  preset_storage.c  tmc2209.c  usb_serial.c  wifi_manager.c  wifi_manager.h
camera_lanc/: camera_lanc.ino
camera_lib/: camera_lib.ino
camera_r4_consolidated/: README.md  camera_r4_consolidated.ino
camera_stepper_test/: camera_stepper_test.ino
camera_zoom_async/: README.md  camera_zoom_async.ino
cmd_server/: server.js
ptz_controller_r4/: .gitignore  BUILD_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  QUICK_BUILD.md  QUICK_FIX.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  board.cpp  board.h  build_and_upload.bat  build_and_upload.sh  fix_compiler_error.bat  homing.cpp  homing.h  motion_planner.cpp  motion_planner.h  preset_storage.cpp  preset_storage.h  ptz_controller_r4.ino  quintic.cpp  segment.cpp  stepper_executor.cpp  stepper_executor.h  usb_serial.cpp  usb_serial.h
service_definitions/: camera-cmd.service  camera-control.service
services/: CameraController.py
